<resources>
    <string name="app_name">Hostel Buddy</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="total_occupants">Total Occupants</string>
    <string name="vacancy">Vacancy</string>
    <string name="manipulate_this_via_java">Manipulate this via Java</string>
    <string name="total_rent_collected">Total Rent Collected This Month</string>
    <string name="remaining_rent">Remaining Rent This Month</string>
    <string name="name">Name</string>
    <string name="phone_no">Phone No.</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone_no">Enter Phone No.</string>
    <string name="room_no">Room No.</string>
    <string name="enter_room_no">Enter Room No.</string>
    <string name="add">Add</string>
    <string name="phone">Phone</string>
    <string name="room">Room</string>
    <string name="enter_the_maximum_number_of_occupants">Enter the maximum number of Occupants</string>
    <string name="max_occupants_per_room">Max. Occupants per Room</string>
    <string name="enter_the_number_of_rooms_to_be_created">Enter the number of rooms to be created</string>
    <string name="no_of_rooms">No. of Rooms</string>
    <string name="save_changes">SAVE CHANGES</string>

    <style name="MyButton" parent="Theme.AppCompat.Light">
        <item name="colorControlHighlight">@color/colorPrimaryDark</item>
        <item name="colorButtonNormal">@color/colorAccent</item>
    </style>
</resources>
