<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".OccupantsActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/name"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primaryText"/>
    <EditText
        android:id="@+id/occ_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_name"
        android:inputType="text"
        android:textColor="@color/secondaryText"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/phone_no"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primaryText"/>
    <EditText
        android:id="@+id/occ_phn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:textColor="@color/secondaryText"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text= "@string/room_no"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/primaryText"/>
    <EditText
        android:id="@+id/occ_room"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_room_no"
        android:inputType="number"
        android:textColor="@color/secondaryText"
        android:textColorHint="@android:color/darker_gray"
        android:textSize="18sp" />
    <View
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <Button
        android:id="@+id/occ_add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add"
        android:textColor="@android:color/white"
        android:theme="@style/MyButton"/>
</LinearLayout>