<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:id="@+id/card_view_occupants"
    android:layout_margin="5dp"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:foreground="?attr/selectableItemBackground">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingBottom="10dp"
        android:paddingTop="20dp"
        android:paddingEnd="5dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/name"
            android:gravity="center_vertical"
            android:text="@string/name"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/phone"
            android:gravity="center_vertical"
            android:text="@string/phone"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.40"
            android:id="@+id/room"
            android:gravity="center_vertical"
            android:text="@string/room" />
    </LinearLayout>
</android.support.v7.widget.CardView>