<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:padding="10dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp"
        android:clipToPadding="false">
        <android.support.v7.widget.CardView
            android:id="@+id/total_card"
            android:foreground="?attr/selectableItemBackground"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:layout_margin="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circlebgred"
                    android:padding="7dp"
                    android:src="@drawable/ic_people_total"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/total_occupants"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayLine"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:id="@+id/count_total"
                    android:text="@string/manipulate_this_via_java"
                    android:padding="5dp"
                    android:textColor="@color/secondaryText"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            android:id="@+id/vacancy_card"
            android:layout_width="140dp"
            android:layout_height="180dp"
            android:layout_margin="10dp"
            android:foreground="?attr/selectableItemBackground">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="70dp"
                    android:layout_height="70dp"
                    android:background="@drawable/circlebgteal"
                    android:padding="7dp"
                    android:src="@drawable/ic_person_vacancy"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginTop="5dp"
                    android:text="@string/vacancy"/>
                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/lightGrayLine"
                    android:layout_margin="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/manipulate_this_via_java"
                    android:padding="5dp"
                    android:textColor="@color/secondaryText"
                    />
            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>
    <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="horizontal"
    android:paddingTop="20dp"
    android:clipToPadding="false">
    <android.support.v7.widget.CardView
        android:id="@+id/total_rent_card"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:foreground="?attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circlebgblue"
                android:padding="7dp"
                android:src="@drawable/ic_money"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/total_rent_collected"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrayLine"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/manipulate_this_via_java"
                android:padding="5dp"
                android:textColor="@color/secondaryText"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/remaining_rent_card"
        android:layout_width="140dp"
        android:layout_height="180dp"
        android:layout_margin="10dp"
        android:foreground="?attr/selectableItemBackground">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <ImageView
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/circlebgorange"
                android:padding="7dp"
                android:src="@drawable/ic_money_2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/remaining_rent"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/lightGrayLine"
                android:layout_margin="5dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/manipulate_this_via_java"
                android:padding="5dp"
                android:textColor="@color/secondaryText"
                />
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>
</LinearLayout>